# HBMReplacement

./: .gitignore  NewLoadcellDesign.odt
firmware/: CMakeLists.txt  Makefile
firmware/config/: board_pins.h  fit7_params.h
firmware/pico/: hal_pico.c
firmware/sim/: hal_sim.c
firmware/src/: config_store.c  config_store.h  fit7_protocol.c  fit7_protocol.h  hal.h  main.c  ring_buffer.c  ring_buffer.h
test/: test_harness.py
